--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "35bbdbfe",
    "metadata": {},
    "outputs": [
@@ -728,13 +728,13 @@
       "d_min_ 1.00656599 \n",
       "d_mean: 1.6175069086666667\n",
       " array is: \n",
-      " [[[ 75.  75.  75.  25.  75.]\n",
-      "  [ 75.  75.  25.  25.  25.]\n",
-      "  [ 75.  25.  75.  75.  75.]]\n",
+      " [[['D' 'D' 'D' 'B' 'D']\n",
+      "  ['D' 'D' 'B' 'B' 'B']\n",
+      "  ['D' 'B' 'D' 'D' 'D']]\n",
       "\n",
-      " [[ 25.  25.  25.  25. 100.]\n",
-      "  [ 75.  75.  75.  75.  75.]\n",
-      "  [ 25.  75.   0.  75.  75.]]]\n"
+      " [['B' 'B' 'B' 'B' 'E']\n",
+      "  ['D' 'D' 'D' 'D' 'D']\n",
+      "  ['B' 'D' 'A' 'D' 'D']]]\n"
      ]
     }
    ],
@@ -746,7 +746,7 @@
     "       [[1.44747908, 1.31673383, 1.02000951, 1.52218947, 1.97066381],\n",
     "        [1.79129243, 1.74983003, 1.96028037, 1.85166831, 1.65450881],\n",
     "        [1.18068344, 1.9587381 , 1.00656599, 1.93402165, 1.73514584]]])\n",
-    "\n",
+    "f = np.empty((2, 3, 5), dtype=str)\n",
     "d_max = np.max(d)\n",
     "d_min = np.min(d)\n",
     "d_mean = np.mean(d)\n",
@@ -756,15 +756,15 @@
     "    for ro, row in enumerate(matrix):\n",
     "        for el, element in enumerate(row):\n",
     "            if d_mean > element > d_min:\n",
-    "                f[ma][ro][el] = \"A\"\n",
+    "                f[ma][ro][el] = \"B\" \n",
     "            elif element == d_max:\n",
     "                f[ma][ro][el] = \"E\"\n",
     "            elif d_max > element > d_mean: \n",
-    "                f[ma][ro][el] = \"B\"    \n",
+    "                f[ma][ro][el] = \"D\"    \n",
     "            elif element > d_mean:\n",
-    "                f[ma][ro][el] = \"C\"\n",
+    "                f[ma][ro][el] = \"B\"\n",
     "            elif element == d_min:\n",
-    "                f[ma][ro][el] = \"D\"\n",
+    "                f[ma][ro][el] = \"A\"\n",
     "\n",
     "print(f\" array is: \\n {f}\")      \n"
    ]
