--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "import numpy as np\n"
    ]
   },
   {
@@ -34,11 +36,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.2.2\n",
+      "{\n",
+      "  \"Compilers\": {\n",
+      "    \"c\": {\n",
+      "      \"name\": \"msvc\",\n",
+      "      \"linker\": \"link\",\n",
+      "      \"version\": \"19.29.30157\",\n",
+      "      \"commands\": \"cl\"\n",
+      "    },\n",
+      "    \"cython\": {\n",
+      "      \"name\": \"cython\",\n",
+      "      \"linker\": \"cython\",\n",
+      "      \"version\": \"3.0.11\",\n",
+      "      \"commands\": \"cython\"\n",
+      "    },\n",
+      "    \"c++\": {\n",
+      "      \"name\": \"msvc\",\n",
+      "      \"linker\": \"link\",\n",
+      "      \"version\": \"19.29.30157\",\n",
+      "      \"commands\": \"cl\"\n",
+      "    }\n",
+      "  },\n",
+      "  \"Machine Information\": {\n",
+      "    \"host\": {\n",
+      "      \"cpu\": \"x86_64\",\n",
+      "      \"family\": \"x86_64\",\n",
+      "      \"endian\": \"little\",\n",
+      "      \"system\": \"windows\"\n",
+      "    },\n",
+      "    \"build\": {\n",
+      "      \"cpu\": \"x86_64\",\n",
+      "      \"family\": \"x86_64\",\n",
+      "      \"endian\": \"little\",\n",
+      "      \"system\": \"windows\"\n",
+      "    }\n",
+      "  },\n",
+      "  \"Build Dependencies\": {\n",
+      "    \"blas\": {\n",
+      "      \"name\": \"scipy-openblas\",\n",
+      "      \"found\": true,\n",
+      "      \"version\": \"0.3.28\",\n",
+      "      \"detection method\": \"pkgconfig\",\n",
+      "      \"include directory\": \"C:/Users/runneradmin/AppData/Local/Temp/cibw-run-fwtr2gmz/cp313-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/include\",\n",
+      "      \"lib directory\": \"C:/Users/runneradmin/AppData/Local/Temp/cibw-run-fwtr2gmz/cp313-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/lib\",\n",
+      "      \"openblas configuration\": \"OpenBLAS 0.3.28  USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell MAX_THREADS=24\",\n",
+      "      \"pc file directory\": \"D:/a/numpy/numpy/.openblas\"\n",
+      "    },\n",
+      "    \"lapack\": {\n",
+      "      \"name\": \"scipy-openblas\",\n",
+      "      \"found\": true,\n",
+      "      \"version\": \"0.3.28\",\n",
+      "      \"detection method\": \"pkgconfig\",\n",
+      "      \"include directory\": \"C:/Users/runneradmin/AppData/Local/Temp/cibw-run-fwtr2gmz/cp313-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/include\",\n",
+      "      \"lib directory\": \"C:/Users/runneradmin/AppData/Local/Temp/cibw-run-fwtr2gmz/cp313-win_amd64/build/venv/Lib/site-packages/scipy_openblas64/lib\",\n",
+      "      \"openblas configuration\": \"OpenBLAS 0.3.28  USE64BITINT DYNAMIC_ARCH NO_AFFINITY Haswell MAX_THREADS=24\",\n",
+      "      \"pc file directory\": \"D:/a/numpy/numpy/.openblas\"\n",
+      "    }\n",
+      "  },\n",
+      "  \"Python Information\": {\n",
+      "    \"path\": \"C:\\\\Users\\\\runneradmin\\\\AppData\\\\Local\\\\Temp\\\\build-env-g8v9pjpn\\\\Scripts\\\\python.exe\",\n",
+      "    \"version\": \"3.13\"\n",
+      "  },\n",
+      "  \"SIMD Extensions\": {\n",
+      "    \"baseline\": [\n",
+      "      \"SSE\",\n",
+      "      \"SSE2\",\n",
+      "      \"SSE3\"\n",
+      "    ],\n",
+      "    \"found\": [\n",
+      "      \"SSSE3\",\n",
+      "      \"SSE41\",\n",
+      "      \"POPCNT\",\n",
+      "      \"SSE42\",\n",
+      "      \"AVX\",\n",
+      "      \"F16C\",\n",
+      "      \"FMA3\",\n",
+      "      \"AVX2\",\n",
+      "      \"AVX512F\",\n",
+      "      \"AVX512CD\",\n",
+      "      \"AVX512_SKX\",\n",
+      "      \"AVX512_CLX\",\n",
+      "      \"AVX512_CNL\",\n",
+      "      \"AVX512_ICL\"\n",
+      "    ]\n",
+      "  }\n",
+      "}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\fee10\\Downloads\\.venv\\Lib\\site-packages\\numpy\\__config__.py:155: UserWarning: Install `pyyaml` for better output\n",
+      "  warnings.warn(\"Install `pyyaml` for better output\", stacklevel=1)\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "print(np.__version__)\n",
+    "\n",
+    "np.show_config()\n"
    ]
   },
   {
@@ -51,11 +158,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[7 2 0 8 8]\n",
+      "  [4 0 7 3 0]\n",
+      "  [8 0 7 7 1]]\n",
+      "\n",
+      " [[0 5 1 5 4]\n",
+      "  [7 0 5 8 6]\n",
+      "  [9 1 6 3 1]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "a = np.random.random([2,3,5])\n",
+    "a = np.random.rand(2,3,5)\n",
+    "a= np.random.randn(2,3,5)\n",
+    "a=np.random.uniform(1,10, size = [2,3,5])\n",
+    "a= np.random.randint(10, size=[2,3,5])\n",
+    "\n"
    ]
   },
   {
@@ -68,11 +196,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[7 2 0 8 8]\n",
+      "  [4 0 7 3 0]\n",
+      "  [8 0 7 7 1]]\n",
+      "\n",
+      " [[0 5 1 5 4]\n",
+      "  [7 0 5 8 6]\n",
+      "  [9 1 6 3 1]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(a)\n"
    ]
   },
   {
@@ -85,11 +228,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "b = np.ones([5, 2, 3])\n"
    ]
   },
   {
@@ -102,11 +246,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(b)"
    ]
   },
   {
@@ -119,11 +285,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "equal_result = (a.size == b.size)\n",
+    "print(equal_result)\n",
+    "\n",
+    "#Yes, they have the same size.\n"
    ]
   },
   {
@@ -136,11 +315,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2,3,5) (5,2,3) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[28], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m### [your code here]\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m added \u001b[38;5;241m=\u001b[39m \u001b[43ma\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(added)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m#Yes, it can be added since both arrays have the same structue.\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,3,5) (5,2,3) "
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "added = a + b\n",
+    "print(added)\n",
+    "\n",
+    "#No, because they have not the same structure (2, 3, 5 vs. 5, 3, 2)"
    ]
   },
   {
@@ -154,11 +349,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "c = np.reshape(b , (2, 3, 5))\n",
+    "print(c)\n"
    ]
   },
   {
@@ -171,11 +382,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 8.  3.  1.  9.  9.]\n",
+      "  [ 5.  1.  8.  4.  1.]\n",
+      "  [ 9.  1.  8.  8.  2.]]\n",
+      "\n",
+      " [[ 1.  6.  2.  6.  5.]\n",
+      "  [ 8.  1.  6.  9.  7.]\n",
+      "  [10.  2.  7.  4.  2.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "d = a + c\n",
+    "print(d)\n",
+    "\n"
    ]
   },
   {
@@ -188,12 +416,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[7 2 0 8 8]\n",
+      "  [4 0 7 3 0]\n",
+      "  [8 0 7 7 1]]\n",
+      "\n",
+      " [[0 5 1 5 4]\n",
+      "  [7 0 5 8 6]\n",
+      "  [9 1 6 3 1]]]\n",
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "\n",
+    "print(a)\n",
+    "\n",
+    "\n",
+    "print(b)\n",
+    "\n",
+    "# a has random values from 0-9 and b has only \"1\" values. However, both arrays have the same size.\n"
    ]
   },
   {
@@ -206,11 +468,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 8.  3.  1.  9.  9.]\n",
+      "  [ 5.  1.  8.  4.  1.]\n",
+      "  [ 9.  1.  8.  8.  2.]]\n",
+      "\n",
+      " [[ 1.  6.  2.  6.  5.]\n",
+      "  [ 8.  1.  6.  9.  7.]\n",
+      "  [10.  2.  7.  4.  2.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "e = a + c\n",
+    "print(e)\n"
    ]
   },
   {
@@ -224,12 +503,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[False False False False False]\n",
+      "  [False False False False False]\n",
+      "  [False False False False False]]\n",
+      "\n",
+      " [[False False False False False]\n",
+      "  [False False False False False]\n",
+      "  [False False False False False]]]\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "equal = (e == a)\n",
+    "print(equal)\n",
+    "\n",
+    "# a and e are not equal since they differ in their values.\n"
    ]
   },
   {
@@ -243,11 +539,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0\n",
+      "1.0\n",
+      "5.1\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
+    "\n",
+    "d_max = np.max(d)\n",
+    "print(d_max)\n",
+    "\n",
+    "d_min = np.min(d)\n",
+    "print(d_min)\n",
+    "\n",
+    "d_mean = np.mean(d)\n",
+    "print(d_mean)\n",
     "\n"
    ]
   },
@@ -261,11 +576,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 8.  3.  1.  9.  9.]\n",
+      "  [ 5.  1.  8.  4.  1.]\n",
+      "  [ 9.  1.  8.  8.  2.]]\n",
+      "\n",
+      " [[ 1.  6.  2.  6.  5.]\n",
+      "  [ 8.  1.  6.  9.  7.]\n",
+      "  [10.  2.  7.  4.  2.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "f = np.empty([2,3,5])\n",
+    "print(f)\n"
    ]
   },
   {
@@ -287,11 +619,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[75.  3.  0. 75. 75.]\n",
+      "  [ 5.  0. 75.  4.  0.]\n",
+      "  [75.  0. 75. 75.  2.]]\n",
+      "\n",
+      " [[ 0. 75.  2. 75.  5.]\n",
+      "  [75.  0. 75. 75. 75.]\n",
+      "  [10.  2. 75.  4.  2.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "f[(d > d_mean) & (d < d_max)] = 75\n",
+    "\n",
+    "f[(d == d_mean)] = 50\n",
+    "\n",
+    "f[(d == d_min)] = 0\n",
+    "\n",
+    "print(f)"
    ]
   },
   {
@@ -325,11 +677,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 8.  3.  1.  9.  9.]\n",
+      "  [ 5.  1.  8.  4.  1.]\n",
+      "  [ 9.  1.  8.  8.  2.]]\n",
+      "\n",
+      " [[ 1.  6.  2.  6.  5.]\n",
+      "  [ 8.  1.  6.  9.  7.]\n",
+      "  [10.  2.  7.  4.  2.]]]\n",
+      "[[[75.  3.  0. 75. 75.]\n",
+      "  [ 5.  0. 75.  4.  0.]\n",
+      "  [75.  0. 75. 75.  2.]]\n",
+      "\n",
+      " [[ 0. 75.  2. 75.  5.]\n",
+      "  [75.  0. 75. 75. 75.]\n",
+      "  [10.  2. 75.  4.  2.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(d)\n",
+    "print(f)"
    ]
   },
   {
@@ -350,17 +725,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]"
+    "### [your code here]\n",
+    "\n",
+    "# for the conditions, instead of assigning numbers, we assign strings."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -374,7 +751,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
