--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "import numpy as np"
    ]
   },
   {
@@ -34,11 +35,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.24.3'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "np.__version__"
    ]
   },
   {
@@ -51,11 +64,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "a = np.random.random((2,3,5))"
    ]
   },
   {
@@ -68,11 +83,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.7432884  0.47953327 0.4242703  0.74702452 0.01964373]\n",
+      "  [0.23007317 0.60458851 0.55335955 0.08993429 0.08461763]\n",
+      "  [0.03476007 0.00106678 0.50768356 0.91589495 0.81865693]]\n",
+      "\n",
+      " [[0.13071842 0.42463585 0.65618514 0.57952783 0.36326272]\n",
+      "  [0.51948214 0.11523036 0.67887241 0.25123329 0.09367624]\n",
+      "  [0.14972071 0.73768004 0.07019706 0.76152366 0.13242668]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(a)"
    ]
   },
   {
@@ -85,11 +115,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "b = np.ones((5,2,3))"
    ]
   },
   {
@@ -102,11 +134,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(b)"
    ]
   },
   {
@@ -119,11 +173,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "np.shape(a) == np.shape(b)"
    ]
   },
   {
@@ -136,11 +203,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (2,3,5) (5,2,3) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[34], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m### [your code here]\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[43ma\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\n",
+      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (2,3,5) (5,2,3) "
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "a + b\n"
    ]
   },
   {
@@ -154,11 +235,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5, 2, 3)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "np.shape(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[1., 1., 1., 1., 1.],\n",
+       "        [1., 1., 1., 1., 1.],\n",
+       "        [1., 1., 1., 1., 1.]],\n",
+       "\n",
+       "       [[1., 1., 1., 1., 1.],\n",
+       "        [1., 1., 1., 1., 1.],\n",
+       "        [1., 1., 1., 1., 1.]]])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### [your code here]\n",
+    "\n",
+    "c = np.transpose(b, axes=(1,2,0))\n",
+    "c\n"
    ]
   },
   {
@@ -171,11 +292,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "d = a + c\n",
+    "\n",
+    "# arrays are of same shape now"
    ]
   },
   {
@@ -188,12 +313,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0.7432884  0.47953327 0.4242703  0.74702452 0.01964373]\n",
+      "  [0.23007317 0.60458851 0.55335955 0.08993429 0.08461763]\n",
+      "  [0.03476007 0.00106678 0.50768356 0.91589495 0.81865693]]\n",
+      "\n",
+      " [[0.13071842 0.42463585 0.65618514 0.57952783 0.36326272]\n",
+      "  [0.51948214 0.11523036 0.67887241 0.25123329 0.09367624]\n",
+      "  [0.14972071 0.73768004 0.07019706 0.76152366 0.13242668]]]\n",
+      "[[[1.7432884  1.47953327 1.4242703  1.74702452 1.01964373]\n",
+      "  [1.23007317 1.60458851 1.55335955 1.08993429 1.08461763]\n",
+      "  [1.03476007 1.00106678 1.50768356 1.91589495 1.81865693]]\n",
+      "\n",
+      " [[1.13071842 1.42463585 1.65618514 1.57952783 1.36326272]\n",
+      "  [1.51948214 1.11523036 1.67887241 1.25123329 1.09367624]\n",
+      "  [1.14972071 1.73768004 1.07019706 1.76152366 1.13242668]]]\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "print(a)\n",
+    "print(d)\n",
+    "\n",
+    "# d is equal to a + 1"
    ]
   },
   {
@@ -206,11 +355,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.7432884 , 0.47953327, 0.4242703 , 0.74702452, 0.01964373],\n",
+       "        [0.23007317, 0.60458851, 0.55335955, 0.08993429, 0.08461763],\n",
+       "        [0.03476007, 0.00106678, 0.50768356, 0.91589495, 0.81865693]],\n",
+       "\n",
+       "       [[0.13071842, 0.42463585, 0.65618514, 0.57952783, 0.36326272],\n",
+       "        [0.51948214, 0.11523036, 0.67887241, 0.25123329, 0.09367624],\n",
+       "        [0.14972071, 0.73768004, 0.07019706, 0.76152366, 0.13242668]]])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "e = a * c\n",
+    "e"
    ]
   },
   {
@@ -224,12 +393,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "\n",
+    "np.array_equal(a,e)\n",
+    "\n",
+    "# they are equal cause x * 1 = x"
    ]
   },
   {
@@ -243,12 +426,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.9158949545037587\n",
+      "1.0010667782422615\n",
+      "1.3972922738030076\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "\n",
+    "d_max = np.max(d)\n",
+    "print(d_max)\n",
+    "\n",
+    "d_min = np.min(d)\n",
+    "print(d_min)\n",
+    "\n",
+    "d_mean = np.mean(d)\n",
+    "print(d_mean)"
    ]
   },
   {
@@ -261,11 +462,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.7432884 , 0.47953327, 0.4242703 , 0.74702452, 0.01964373],\n",
+       "        [0.23007317, 0.60458851, 0.55335955, 0.08993429, 0.08461763],\n",
+       "        [0.03476007, 0.00106678, 0.50768356, 0.91589495, 0.81865693]],\n",
+       "\n",
+       "       [[0.13071842, 0.42463585, 0.65618514, 0.57952783, 0.36326272],\n",
+       "        [0.51948214, 0.11523036, 0.67887241, 0.25123329, 0.09367624],\n",
+       "        [0.14972071, 0.73768004, 0.07019706, 0.76152366, 0.13242668]]])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "\n",
+    "f = np.empty((2,3,5))\n",
+    "f"
    ]
   },
   {
@@ -287,11 +508,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 75.,  75.,  75.,  75.,  25.],\n",
+       "        [ 25.,  75.,  75.,  25.,  25.],\n",
+       "        [ 25.,   0.,  75., 100.,  75.]],\n",
+       "\n",
+       "       [[ 25.,  75.,  75.,  75.,  25.],\n",
+       "        [ 75.,  25.,  75.,  25.,  25.],\n",
+       "        [ 25.,  75.,  25.,  75.,  25.]]])"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "for block, content in enumerate(d):\n",
+    "    for row, content1 in enumerate(content):\n",
+    "        for column, content2 in enumerate(content1):\n",
+    "            value = d[block][row][column]\n",
+    "            if value == d_mean:\n",
+    "                f[block][row][column] = 50\n",
+    "            elif value > d_mean and value < d_max:\n",
+    "                f[block][row][column] = 75\n",
+    "            elif value > d_min and value < d_mean:\n",
+    "                f[block][row][column] = 25\n",
+    "            elif value == d_max:\n",
+    "                f[block][row][column] = 100\n",
+    "            elif value == d_min:\n",
+    "                f[block][row][column] = 0\n",
+    "\n",
+    "f\n"
    ]
   },
   {
@@ -325,11 +579,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1.7432884  1.47953327 1.4242703  1.74702452 1.01964373]\n",
+      "  [1.23007317 1.60458851 1.55335955 1.08993429 1.08461763]\n",
+      "  [1.03476007 1.00106678 1.50768356 1.91589495 1.81865693]]\n",
+      "\n",
+      " [[1.13071842 1.42463585 1.65618514 1.57952783 1.36326272]\n",
+      "  [1.51948214 1.11523036 1.67887241 1.25123329 1.09367624]\n",
+      "  [1.14972071 1.73768004 1.07019706 1.76152366 1.13242668]]]\n",
+      "[[[ 75.  75.  75.  75.  25.]\n",
+      "  [ 25.  75.  75.  25.  25.]\n",
+      "  [ 25.   0.  75. 100.  75.]]\n",
+      "\n",
+      " [[ 25.  75.  75.  75.  25.]\n",
+      "  [ 75.  25.  75.  25.  25.]\n",
+      "  [ 25.  75.  25.  75.  25.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(d)\n",
+    "print(f)"
    ]
   },
   {
@@ -350,17 +627,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[['B', 'B', 'B', 'B', 'D'],\n",
+       "        ['D', 'B', 'B', 'D', 'D'],\n",
+       "        ['D', 'E', 'B', 'A', 'B']],\n",
+       "\n",
+       "       [['D', 'B', 'B', 'B', 'D'],\n",
+       "        ['B', 'D', 'B', 'D', 'D'],\n",
+       "        ['D', 'B', 'D', 'B', 'D']]], dtype='<U1')"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]"
+    "### [your code here]\n",
+    "g = np.empty((2,3,5),dtype=np.str_)\n",
+    "\n",
+    "for block in range(len(d)):\n",
+    "    for row in range(len(d[block])):\n",
+    "        for column in range(len(d[block][row])):\n",
+    "            value = d[block][row][column]\n",
+    "            if value == d_mean:\n",
+    "                g[block][row][column] = \"c\"\n",
+    "            elif value > d_mean and value < d_max:\n",
+    "                g[block][row][column] = \"B\"\n",
+    "            elif value > d_min and value < d_mean:\n",
+    "                g[block][row][column] = \"D\"\n",
+    "            elif value == d_max:\n",
+    "                g[block][row][column] = \"A\"\n",
+    "            elif value == d_min:\n",
+    "                g[block][row][column] = \"E\"\n",
+    "\n",
+    "g\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "datasci_env",
    "language": "python",
    "name": "python3"
   },
@@ -374,7 +686,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
