Done by Sergej on 10-02-25

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -16,11 +16,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "import numpy as np\n"
    ]
   },
   {
@@ -34,11 +35,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current ver of numpy is  2.2.2\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(\"Current ver of numpy is \", np.__version__)\n"
    ]
   },
   {
@@ -51,11 +61,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 13286.88, -22156.16,  17326.99,  87195.3 , -52872.1 ],\n",
+       "        [-57902.07,  80199.36,  97600.98, -47714.2 ,  98924.68],\n",
+       "        [  2752.82, -91776.78, -45280.8 , -94617.44, -26058.45]],\n",
+       "\n",
+       "       [[ 85438.74, -51971.72, -32451.29,   1856.59,  60857.19],\n",
+       "        [ 42721.58,  76269.7 ,  75440.92,  42845.68,  36312.63],\n",
+       "        [ 63891.02,  30795.04,  64508.52, -71720.88,  -6459.73]]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "a = np.random.random((2, 3, 5)) # array of float numbers between 0 and 1\n",
+    "a = np.random.randint(-1000, 1001, (2, 3, 5)) #  array of int  numbers between -1000 and  1000\n",
+    "a = np.round(np.random.uniform(-100000, 100001, (2, 3, 5)), 2) # array of float  numbers between -100,000 and  100,000\n",
+    "a\n"
    ]
   },
   {
@@ -68,11 +99,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 13286.88 -22156.16  17326.99  87195.3  -52872.1 ]\n",
+      "  [-57902.07  80199.36  97600.98 -47714.2   98924.68]\n",
+      "  [  2752.82 -91776.78 -45280.8  -94617.44 -26058.45]]\n",
+      "\n",
+      " [[ 85438.74 -51971.72 -32451.29   1856.59  60857.19]\n",
+      "  [ 42721.58  76269.7   75440.92  42845.68  36312.63]\n",
+      "  [ 63891.02  30795.04  64508.52 -71720.88  -6459.73]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(a)"
    ]
   },
   {
@@ -85,11 +131,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "b = np.ones((5, 2, 3), dtype=float)"
    ]
   },
   {
@@ -102,11 +149,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1.]\n",
+      "  [1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(b)"
    ]
   },
   {
@@ -119,11 +188,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Arrays a and b have the same size: 30\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "if a.size == b.size:\n",
+    "    print(f\" Arrays a and b have the same size: {a.size}\")"
    ]
   },
   {
@@ -136,11 +215,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arrays a and b have different shape operands could not be broadcast together with shapes (2,3,5) (5,2,3) \n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "try:\n",
+    "    a + b\n",
+    "except ValueError as e:\n",
+    "    print(\"Arrays a and b have different shape\", e)\n"
    ]
   },
   {
@@ -154,11 +245,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]\n",
+      "\n",
+      " [[1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]\n",
+      "  [1. 1. 1. 1. 1.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "c = b.transpose(1,2,0)\n",
+    "print(c)"
    ]
   },
   {
@@ -171,11 +278,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "try:\n",
+    "    d = a + c\n",
+    "except ValueError as e:\n",
+    "    print(\"Arrays a and c have different shape\", e)"
    ]
   },
   {
@@ -188,11 +299,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a =\n",
+      " [[[ 13286.88 -22156.16  17326.99  87195.3  -52872.1 ]\n",
+      "  [-57902.07  80199.36  97600.98 -47714.2   98924.68]\n",
+      "  [  2752.82 -91776.78 -45280.8  -94617.44 -26058.45]]\n",
+      "\n",
+      " [[ 85438.74 -51971.72 -32451.29   1856.59  60857.19]\n",
+      "  [ 42721.58  76269.7   75440.92  42845.68  36312.63]\n",
+      "  [ 63891.02  30795.04  64508.52 -71720.88  -6459.73]]]\n",
+      "d =\n",
+      " [[[ 13287.88 -22155.16  17327.99  87196.3  -52871.1 ]\n",
+      "  [-57901.07  80200.36  97601.98 -47713.2   98925.68]\n",
+      "  [  2753.82 -91775.78 -45279.8  -94616.44 -26057.45]]\n",
+      "\n",
+      " [[ 85439.74 -51970.72 -32450.29   1857.59  60858.19]\n",
+      "  [ 42722.58  76270.7   75441.92  42846.68  36313.63]\n",
+      "  [ 63892.02  30796.04  64509.52 -71719.88  -6458.73]]]\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
+    "print(\"a =\\n\", a)\n",
+    "print(\"d =\\n\", d)\n",
     "\n"
    ]
   },
@@ -206,11 +342,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "e = a * c"
    ]
   },
   {
@@ -224,12 +361,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a =\n",
+      " [[[ 13286.88 -22156.16  17326.99  87195.3  -52872.1 ]\n",
+      "  [-57902.07  80199.36  97600.98 -47714.2   98924.68]\n",
+      "  [  2752.82 -91776.78 -45280.8  -94617.44 -26058.45]]\n",
+      "\n",
+      " [[ 85438.74 -51971.72 -32451.29   1856.59  60857.19]\n",
+      "  [ 42721.58  76269.7   75440.92  42845.68  36312.63]\n",
+      "  [ 63891.02  30795.04  64508.52 -71720.88  -6459.73]]]\n",
+      "e =\n",
+      " [[[ 13286.88 -22156.16  17326.99  87195.3  -52872.1 ]\n",
+      "  [-57902.07  80199.36  97600.98 -47714.2   98924.68]\n",
+      "  [  2752.82 -91776.78 -45280.8  -94617.44 -26058.45]]\n",
+      "\n",
+      " [[ 85438.74 -51971.72 -32451.29   1856.59  60857.19]\n",
+      "  [ 42721.58  76269.7   75440.92  42845.68  36312.63]\n",
+      "  [ 63891.02  30795.04  64508.52 -71720.88  -6459.73]]]\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "print(\"a =\\n\", a)\n",
+    "print(\"e =\\n\", e)\n",
+    "\n",
+    "# a equals e because we mulitiplied each element in a by 1\n"
    ]
   },
   {
@@ -243,12 +406,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d_max = 98925.68, d_min = -94616.44, d_mean = 12575.77\n"
+     ]
+    }
+   ],
    "source": [
     "### [your code here]\n",
-    "\n"
+    "d_max = np.max(d)\n",
+    "d_min = np.min(d)\n",
+    "d_mean = round(np.mean(d), 2)\n",
+    "\n",
+    "print(f\"d_max = {d_max}, d_min = {d_min}, d_mean = {d_mean}\")\n"
    ]
   },
   {
@@ -261,11 +436,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 13286.88 -22156.16  17326.99  87195.3  -52872.1 ]\n",
+      "  [-57902.07  80199.36  97600.98 -47714.2   98924.68]\n",
+      "  [  2752.82 -91776.78 -45280.8  -94617.44 -26058.45]]\n",
+      "\n",
+      " [[ 85438.74 -51971.72 -32451.29   1856.59  60857.19]\n",
+      "  [ 42721.58  76269.7   75440.92  42845.68  36312.63]\n",
+      "  [ 63891.02  30795.04  64508.52 -71720.88  -6459.73]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "f = np.empty((2, 3, 5))\n",
+    "print(f)\n"
    ]
   },
   {
@@ -287,11 +478,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "for i in range(len(d)):\n",
+    "    for j in range(len(d[i])):\n",
+    "        for h in range(len(d[i][j])):\n",
+    "            if d[i][j][h] == d_min:\n",
+    "                f[i][j][h] = 0\n",
+    "            elif d[i][j][h] == d_max:\n",
+    "                f[i][j][h] = 100\n",
+    "            elif d[i][j][h] == d_mean:\n",
+    "                f[i][j][h] = 50\n",
+    "            elif d[i][j][h] < d_mean:\n",
+    "                f[i][j][h] = 25\n",
+    "            else:\n",
+    "                f[i][j][h] = 75\n"
    ]
   },
   {
@@ -325,11 +529,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 13287.88 -22155.16  17327.99  87196.3  -52871.1 ]\n",
+      "  [-57901.07  80200.36  97601.98 -47713.2   98925.68]\n",
+      "  [  2753.82 -91775.78 -45279.8  -94616.44 -26057.45]]\n",
+      "\n",
+      " [[ 85439.74 -51970.72 -32450.29   1857.59  60858.19]\n",
+      "  [ 42722.58  76270.7   75441.92  42846.68  36313.63]\n",
+      "  [ 63892.02  30796.04  64509.52 -71719.88  -6458.73]]]\n",
+      "[[[ 75.  25.  75.  75.  25.]\n",
+      "  [ 25.  75.  75.  25. 100.]\n",
+      "  [ 25.  25.  25.   0.  25.]]\n",
+      "\n",
+      " [[ 75.  25.  25.  25.  75.]\n",
+      "  [ 75.  75.  75.  75.  75.]\n",
+      "  [ 75.  75.  75.  25.  25.]]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]\n"
+    "### [your code here]\n",
+    "print(d)\n",
+    "\n",
+    "print(f)"
    ]
   },
   {
@@ -350,11 +578,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[['' '' '' '' '']\n",
+      "  ['' '' '' '' '']\n",
+      "  ['' '' '' '' '']]\n",
+      "\n",
+      " [['' '' '' '' '']\n",
+      "  ['' '' '' '' '']\n",
+      "  ['' '' '' '' '']]]\n",
+      "\n",
+      "[[['D' 'B' 'D' 'D' 'B']\n",
+      "  ['B' 'D' 'D' 'B' 'E']\n",
+      "  ['B' 'B' 'B' 'A' 'B']]\n",
+      "\n",
+      " [['D' 'B' 'B' 'B' 'D']\n",
+      "  ['D' 'D' 'D' 'D' 'D']\n",
+      "  ['D' 'D' 'D' 'B' 'B']]]\n"
+     ]
+    }
+   ],
    "source": [
-    "### [your code here]"
+    "### [your code here]\n",
+    "\n",
+    "g = np.empty((2, 3, 5), dtype='str')\n",
+    "print(g)\n",
+    "for i in range(len(d)):\n",
+    "    for j in range(len(d[i])):\n",
+    "        for h in range(len(d[i][j])):\n",
+    "            if d[i][j][h] == d_min:\n",
+    "                g[i][j][h] = 'A'\n",
+    "            elif d[i][j][h] == d_max:\n",
+    "                g[i][j][h] = 'E'\n",
+    "            elif d[i][j][h] == d_mean:\n",
+    "                g[i][j][h] = 'C'\n",
+    "            elif d[i][j][h] < d_mean:\n",
+    "                g[i][j][h] = 'B'\n",
+    "            else:\n",
+    "                g[i][j][h] = 'D'\n",
+    "\n",
+    "print()\n",
+    "print(g)\n"
    ]
   }
  ],
@@ -374,7 +643,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
